deploy: 0fa10901753fee7dac0a389215651b79f2206e9a

--- a/spain-2025-itinerary.html
+++ b/spain-2025-itinerary.html
@@ -128,12 +128,10 @@ ul.task-list li input[type="checkbox"] {
   <li><a href="#pack-setup" id="toc-pack-setup" class="nav-link" data-scroll-target="#pack-setup">Pack Setup</a></li>
   <li><a href="#clothing" id="toc-clothing" class="nav-link" data-scroll-target="#clothing">Clothing</a></li>
   <li><a href="#footwear" id="toc-footwear" class="nav-link" data-scroll-target="#footwear">Footwear</a></li>
-  <li><a href="#toiletries" id="toc-toiletries" class="nav-link" data-scroll-target="#toiletries">Toiletries</a></li>
   <li><a href="#health-first-aid" id="toc-health-first-aid" class="nav-link" data-scroll-target="#health-first-aid">Health &amp; First Aid</a></li>
   <li><a href="#electronics" id="toc-electronics" class="nav-link" data-scroll-target="#electronics">Electronics</a></li>
   <li><a href="#other" id="toc-other" class="nav-link" data-scroll-target="#other">Other</a></li>
   </ul></li>
-  <li><a href="#notes-next-steps" id="toc-notes-next-steps" class="nav-link" data-scroll-target="#notes-next-steps">Notes &amp; Next Steps</a></li>
   <li><a href="#trip-references-bookings-contacts" id="toc-trip-references-bookings-contacts" class="nav-link" data-scroll-target="#trip-references-bookings-contacts">Trip References (Bookings &amp; Contacts)</a>
   <ul class="collapse">
   <li><a href="#flights" id="toc-flights" class="nav-link" data-scroll-target="#flights">Flights</a></li>
@@ -324,6 +322,25 @@ This morning my muscles were stiff and sore, so I started slowly. Many walkers p
 <li>Overnight: <strong>Pensión Rua Nova</strong> (Rúa Nova, 4, Santiago de Compostela).</li>
 </ul></li>
 </ul>
+<div class="callout callout-style-default callout-note callout-titled">
+<div class="callout-header d-flex align-content-center">
+<div class="callout-icon-container">
+<i class="callout-icon"></i>
+</div>
+<div class="callout-title-container flex-fill">
+Note
+</div>
+</div>
+<div class="callout-body-container callout-body">
+<p><strong>Daily Summary — Oct 4</strong><br>
+Rain fell steadily throughout the day, but it was my sore left ankle and right knee that slowed my pace. The group I’d been having dinner with started later and eventually overtook me, and we stopped together for a café con leche before parting ways. E</p>
+<p>I walked for a while with a German man who had started his Camino in France and later saw him again as I entered Santiago. I also came across a Danish woman I’d met a few days earlier who had also begun in France. For both of them, reaching Santiago was a major moment after weeks on the trail.</p>
+<p>I stopped at a restaurant for caldo gallego, a warm Galician soup that was a welcome break from the rain. When I reached Monte do Gozo—the traditional first viewpoint of Santiago—the fog was thick enough that I couldn’t see the city below. The final stretch into Santiago wasn’t very scenic, following the highway for a while, but entering the old town was something special. Catching the first clear glimpse of the cathedral as I approached was still inspiring.</p>
+<p>The main square was filled with pilgrims celebrating the end of their journeys—some, like me, having walked just five days, and others who had been on the road for more than a month.</p>
+<p>I checked into a proper hotel at last. The room was small but felt like luxury after the albergues. After a much-needed nap to rest my legs, I explored the old town and cathedral in the evening light.</p>
+<p>Dinner was at a tapas restaurant where I had the best scallops I’ve ever tasted, along with excellent Spanish wine. Later I joined Guillermo from Salamanca, two British men, and three women from the Basque Country for a tapas crawl that took us to several local bars. We stayed out late, in true Spanish fashion. In the early hours of the morning we parted ways. Even though we’d only known each other a few days, the hours walking, talking, and going out in the evenings made it feel like much longer.</p>
+</div>
+</div>
 </section>
 <section id="day-8-sun-oct-5" class="level3">
 <h3 class="anchored" data-anchor-id="day-8-sun-oct-5">Day 8 – Sun Oct 5</h3>
@@ -341,24 +358,17 @@ This morning my muscles were stiff and sore, so I started slowly. Many walkers p
 </section>
 <section id="day-9-mon-oct-6" class="level3">
 <h3 class="anchored" data-anchor-id="day-9-mon-oct-6">Day 9 – Mon Oct 6</h3>
+<p><strong>Decision Point</strong> - <strong>Option A — Stay in Santiago (3rd night):</strong><br>
+Take a true rest day. Sleep in, wander the old town, maybe revisit the cathedral or rooftop tour, and linger over long lunches or café breaks. Best choice if the weather looks rough or your ankle and knee are still grumpy from the Camino.</p>
 <ul>
-<li><strong>Decision point:</strong> Reassess energy and weather on the evening of Oct 4 (after arrival in Santiago) to decide whether to overnight in Finisterre or remain in Santiago</li>
-<li>Morning bus to Finisterre (~2.5 hrs).<br>
-</li>
-<li>Explore the fishing port, beach, and town.<br>
-</li>
-<li>Evening walk to Cabo Fisterra lighthouse for sunset at the “end of the world.”<br>
-</li>
-<li>Overnight: <strong>Finisterre (book in Santiago if weather/energy permit) OR third night in Santiago</strong> — decision to be made after arrival.</li>
+<li><strong>Option B — Day tour to Finisterre, Ézaro &amp; Muxía:</strong><br>
+Full-day guided excursion (around 9 a.m.–7 p.m.) from Santiago to the Galician coast. Visit the Finisterre Lighthouse, the dramatic Ézaro waterfall, and the seaside sanctuary at Muxía. Expect sweeping Atlantic views, small fishing villages, and a relaxed seafood lunch before returning to Santiago for a final evening of tapas and celebration.</li>
 </ul>
+<p>Overnight: <strong>Hotel Rúa Villar</strong> (Santiago).</p>
 </section>
 <section id="day-10-tue-oct-7" class="level3">
 <h3 class="anchored" data-anchor-id="day-10-tue-oct-7">Day 10 – Tue Oct 7</h3>
 <ul>
-<li>Morning in Finisterre — coffee in town or short coastal stroll.<br>
-</li>
-<li>Midday bus back to Santiago (~2.5 hrs).<br>
-</li>
 <li>11:48 — Depart Santiago (AVE 04314, Confort, seat 4D, Booking Reference: KYC3XB).<br>
 </li>
 <li>14:50 — Arrive Madrid Chamartín.<br>
@@ -418,12 +428,17 @@ This morning my muscles were stiff and sore, so I started slowly. Many walkers p
 <section id="clothing" class="level3">
 <h3 class="anchored" data-anchor-id="clothing">Clothing</h3>
 <ul>
-<li>2 Patagonia Capilene Cool Daily tees (short-sleeve, quick-dry)<br>
+<li>2 Patagonia Capilene Cool Daily tees (short-sleeve, quick-dry)
+<ul>
+<li><em>Quick dry fabric was a must</em><br>
 </li>
+</ul></li>
 <li>Smartwool Merino 150 Quarter Zip (long-sleeve thermal, doubles as evening shirt)<br>
 </li>
-<li>Patagonia R1 Air Pullover (light fleece mid-layer)<br>
-</li>
+<li>Patagonia R1 Air Pullover (light fleece mid-layer)
+<ul>
+<li><em>Was the perfect fleece for this trip</em></li>
+</ul></li>
 <li>1 lightweight rain jacket (waterproof, breathable)<br>
 </li>
 <li>1 REI Sahara Stretch Convertible Pants (trail use, doubles as shorts)<br>
@@ -440,14 +455,14 @@ This morning my muscles were stiff and sore, so I started slowly. Many walkers p
 <section id="footwear" class="level3">
 <h3 class="anchored" data-anchor-id="footwear">Footwear</h3>
 <ul>
-<li>Altra Lone Peak 9 Trail Running Shoes (primary walking shoes)<br>
-</li>
-<li>Xero Shoes Z-Trail EV Sandals (evenings / backup)</li>
-</ul>
-</section>
-<section id="toiletries" class="level3">
-<h3 class="anchored" data-anchor-id="toiletries">Toiletries</h3>
+<li>Altra Lone Peak 9 Trail Running Shoes (primary walking shoes)
 <ul>
+<li><em>These shoes were very comfortable and trail running shoes such as this are by far the most common Camino footwear. However, my ankles might have appreciated a bit more support from a light hiking shoe such as a Hoka Speedgoat</em></li>
+</ul></li>
+<li>Xero Shoes Z-Trail EV Sandals (evenings / backup)
+<ul>
+<li><em>These are nice light sandals, but simple flip flops would have been sufficient</em> ### Toiletries</li>
+</ul></li>
 <li>Toothbrush + small toothpaste<br>
 </li>
 <li>Dr.&nbsp;Bronner’s Organic Liquid Soap – 2 oz (body + laundry)<br>
@@ -468,8 +483,10 @@ This morning my muscles were stiff and sore, so I started slowly. Many walkers p
 <section id="health-first-aid" class="level3">
 <h3 class="anchored" data-anchor-id="health-first-aid">Health &amp; First Aid</h3>
 <ul>
-<li>Walgreens blister pads (Compeed-style hydrocolloid)<br>
-</li>
+<li>Walgreens blister pads (Compeed-style hydrocolloid)
+<ul>
+<li><em>A necessity … I was able to share with a few others who did not bring</em></li>
+</ul></li>
 <li>Ibuprofen / acetaminophen / citalopram / ambien</li>
 <li>Hand sanitizer</li>
 <li>Tissues</li>
@@ -485,7 +502,10 @@ This morning my muscles were stiff and sore, so I started slowly. Many walkers p
 </li>
 <li>EU Plug adapter</li>
 <li>AirPods</li>
-<li>13″ MacBook Air (with power bank/cord)</li>
+<li>13″ MacBook Air (with power bank/cord)
+<ul>
+<li><em>There were times I’m glad I had this, but I’m not sure it was worth the weight; will reconsider for next time</em></li>
+</ul></li>
 </ul>
 </section>
 <section id="other" class="level3">
@@ -494,23 +514,23 @@ This morning my muscles were stiff and sore, so I started slowly. Many walkers p
 <li>Sunglasses<br>
 </li>
 <li>Hat</li>
-<li>Clothesline for drying</li>
-<li>Sleep sack / liner (for albergues)<br>
-</li>
-<li>Nite Ize gear tie 6” x 2</li>
-<li>2 × 1 L bottles (Smartwater style — bring 1 from home, buy 1 in Spain)<br>
-</li>
-<li>pen</li>
-</ul>
-<hr>
-</section>
-</section>
-<section id="notes-next-steps" class="level2">
-<h2 class="anchored" data-anchor-id="notes-next-steps">Notes &amp; Next Steps</h2>
+<li>Clothesline for drying
 <ul>
-<li>Decide 2 vs.&nbsp;3 nights in Santiago +/- daytrip to Finisterre or other vs.&nbsp;Overnight in Finisterre</li>
+<li><em>I didn’t end up using as albergues each had either a rail or line to use. But the weight was minimal and it could have come in handy</em></li>
+</ul></li>
+<li>Sleep sack / liner (for albergues)
+<ul>
+<li><em>This was nice as albergue bedding sometimes was minimal</em></li>
+</ul></li>
+<li>Nite Ize gear tie 6” x 2 <em>I didn’t use, but weight was minimal and could have come in handy</em></li>
+<li>2 × 1 L bottles (Smartwater style — bring 1 from home, buy 1 in Spain)</li>
+<li>pen
+<ul>
+<li><em>more useful than I had thought, Pilgrim credencial requires some writing</em></li>
+</ul></li>
 </ul>
 <hr>
+</section>
 </section>
 <section id="trip-references-bookings-contacts" class="level2">
 <h2 class="anchored" data-anchor-id="trip-references-bookings-contacts">Trip References (Bookings &amp; Contacts)</h2>
