deploy: 6ebbfe4faa0f026d6297ac8362ef6ca78f77f05f

--- a/spain-2025-itinerary.html
+++ b/spain-2025-itinerary.html
@@ -358,13 +358,14 @@ Rain fell steadily throughout the day, but it was my sore left ankle and right k
 </section>
 <section id="day-9-mon-oct-6" class="level3">
 <h3 class="anchored" data-anchor-id="day-9-mon-oct-6">Day 9 – Mon Oct 6</h3>
-<p><strong>Decision Point</strong> - <strong>Option A — Stay in Santiago (3rd night):</strong><br>
-Take a true rest day. Sleep in, wander the old town, maybe revisit the cathedral or rooftop tour, and linger over long lunches or café breaks. Best choice if the weather looks rough or your ankle and knee are still grumpy from the Camino.</p>
+<p><strong>Decision Point</strong></p>
 <ul>
-<li><strong>Option B — Day tour to Finisterre, Ézaro &amp; Muxía:</strong><br>
-Full-day guided excursion (around 9 a.m.–7 p.m.) from Santiago to the Galician coast. Visit the Finisterre Lighthouse, the dramatic Ézaro waterfall, and the seaside sanctuary at Muxía. Expect sweeping Atlantic views, small fishing villages, and a relaxed seafood lunch before returning to Santiago for a final evening of tapas and celebration.</li>
+<li><p><strong>Option A — Stay in Santiago (3rd night):</strong><br>
+Take a true rest day. Sleep in, wander the old town, maybe revisit the cathedral or rooftop tour, and linger over long lunches or café breaks. Best choice if the weather looks rough or your ankle and knee are still grumpy from the Camino.</p></li>
+<li><p><strong>Option B — Day tour to Finisterre, Ézaro &amp; Muxía:</strong><br>
+Full-day guided excursion (around 9 a.m.–7 p.m.) from Santiago to the Galician coast. Visit the Finisterre Lighthouse, the dramatic Ézaro waterfall, and the seaside sanctuary at Muxía. Expect sweeping Atlantic views, small fishing villages, and a relaxed seafood lunch before returning to Santiago for a final evening of tapas and celebration.</p></li>
+<li><p>Overnight: <strong>Hotel Rúa Villar</strong> (Santiago).</p></li>
 </ul>
-<p>Overnight: <strong>Hotel Rúa Villar</strong> (Santiago).</p>
 </section>
 <section id="day-10-tue-oct-7" class="level3">
 <h3 class="anchored" data-anchor-id="day-10-tue-oct-7">Day 10 – Tue Oct 7</h3>
