deploy: 00825d17d060742bfdf195bbd1a64cb8f2b456e9

--- a/spain-2025-itinerary.html
+++ b/spain-2025-itinerary.html
@@ -118,9 +118,7 @@ ul.task-list li input[type="checkbox"] {
   <li><a href="#day-2-mon-sept-29" id="toc-day-2-mon-sept-29" class="nav-link" data-scroll-target="#day-2-mon-sept-29">Day 2 – Mon Sept 29</a></li>
   <li><a href="#days-37-sept-30-to-oct-4-camino-francés-last-115-km" id="toc-days-37-sept-30-to-oct-4-camino-francés-last-115-km" class="nav-link" data-scroll-target="#days-37-sept-30-to-oct-4-camino-francés-last-115-km">Days 3–7 – Sept 30 to Oct 4 (Camino Francés – last 115 km)</a></li>
   <li><a href="#day-8-sun-oct-5" id="toc-day-8-sun-oct-5" class="nav-link" data-scroll-target="#day-8-sun-oct-5">Day 8 – Sun Oct 5</a></li>
-  <li><a href="#day-8-sun-oct-5-1" id="toc-day-8-sun-oct-5-1" class="nav-link" data-scroll-target="#day-8-sun-oct-5-1">Day 8 – Sun Oct 5</a></li>
   <li><a href="#day-9-mon-oct-6" id="toc-day-9-mon-oct-6" class="nav-link" data-scroll-target="#day-9-mon-oct-6">Day 9 – Mon Oct 6</a></li>
-  <li><a href="#day-9-mon-oct-6-1" id="toc-day-9-mon-oct-6-1" class="nav-link" data-scroll-target="#day-9-mon-oct-6-1">Day 9 – Mon Oct 6</a></li>
   <li><a href="#day-10-tue-oct-7" id="toc-day-10-tue-oct-7" class="nav-link" data-scroll-target="#day-10-tue-oct-7">Day 10 – Tue Oct 7</a></li>
   <li><a href="#day-11-wed-oct-8" id="toc-day-11-wed-oct-8" class="nav-link" data-scroll-target="#day-11-wed-oct-8">Day 11 – Wed Oct 8</a></li>
   </ul></li>
@@ -351,20 +349,6 @@ Rain fell steadily throughout the day, but it was my sore left ankle and right k
 </li>
 <li>Overnight: <strong>Pensión Rua Nova</strong> (Single room with private bathroom, free Wi-Fi, pedestrian old town location).</li>
 </ul>
-</section>
-<section id="day-8-sun-oct-5-1" class="level3">
-<h3 class="anchored" data-anchor-id="day-8-sun-oct-5-1">Day 8 – Sun Oct 5</h3>
-<ul>
-<li>Full day in Santiago.<br>
-</li>
-<li>Morning: Pilgrim’s Mass and/or cathedral museum/rooftop tour.<br>
-</li>
-<li>Afternoon: wander the old town, Alameda Park, and relax at a café.<br>
-</li>
-<li>Evening tapas crawl on Rúa do Franco.<br>
-</li>
-<li>Overnight: Pensión Rua Nova (Single room with private bathroom, free Wi-Fi, pedestrian old town location).</li>
-</ul>
 <div class="callout callout-style-default callout-note callout-titled">
 <div class="callout-header d-flex align-content-center">
 <div class="callout-icon-container">
@@ -387,15 +371,10 @@ After staying out late the night before, I slept in and took things slowly. The 
 </section>
 <section id="day-9-mon-oct-6" class="level3">
 <h3 class="anchored" data-anchor-id="day-9-mon-oct-6">Day 9 – Mon Oct 6</h3>
-</section>
-<section id="day-9-mon-oct-6-1" class="level3">
-<h3 class="anchored" data-anchor-id="day-9-mon-oct-6-1">Day 9 – Mon Oct 6</h3>
 <ul>
-<li>Finisterre, Ézaro &amp; Muxía day tour (Toxo Travel)
+<li><p>Finisterre, Ézaro &amp; Muxía day tour (Toxo Travel)</p>
 <ul>
-<li><p>08:50 check-in at Toxo Travel office, Rúa dos Bautizados 12 (tour departs 09:00)</p></li>
-<li><p>Booking ID T1381-251005-27 · paid €49 · +34 603 711 701 · info@toxotravel.gal</p></li>
-<li><p>Planned stops</p>
+<li>Planned stops
 <ul>
 <li>Muros — fishing village with 15th-century historic quarter, arcades and galleries overlooking the estuary</li>
 <li>Ézaro waterfall — River Xallas drops ~40 m directly to the sea</li>
@@ -404,9 +383,9 @@ After staying out late the night before, I slept in and took things slowly. The 
 <li>Muxía — Sanctuary of A Barca and the three “sacred stones” on a wild Atlantic point</li>
 <li>Ponte Maceira — cobbled hamlet with 14th-century Romanesque bridge and medieval mills</li>
 </ul></li>
-<li><p>Return to Santiago by early evening for a relaxed final night in the old town</p></li>
 </ul></li>
-<li>Overnight: Hotel Rúa Villar (Santiago).</li>
+<li><p>Return to Santiago by early evening for a relaxed final night in the old town</p></li>
+<li><p>Overnight: <strong>Hotel Rúa Villar</strong> (Santiago).</p></li>
 </ul>
 </section>
 <section id="day-10-tue-oct-7" class="level3">
@@ -548,7 +527,7 @@ After staying out late the night before, I slept in and took things slowly. The 
 <li>AirPods</li>
 <li>13″ MacBook Air (with power bank/cord)
 <ul>
-<li><em>There were times I’m glad I had this, but I’m not sure it was worth the weight; will reconsider for next time</em></li>
+<li><em>There were times I’m glad I had this, but it probably was not worth the weight; will reconsider for next time</em></li>
 </ul></li>
 </ul>
 </section>
