--- a/spain-2025-itinerary.html
+++ b/spain-2025-itinerary.html
@@ -167,10 +167,7 @@ ul.task-list li input[type="checkbox"] {
 <section id="day-1-sun-sept-28" class="level3">
 <h3 class="anchored" data-anchor-id="day-1-sun-sept-28">Day 1 – Sun Sept 28</h3>
 <ul>
-<li>Muskegon → Chicago (KG 5760, dep 12:05 pm, arr 11:55 am)
-<ul>
-<li>American Airlines Flagship Lounge in T3 near Gate K19</li>
-</ul></li>
+<li>Muskegon → Chicago (KG 5760, dep 12:05 pm, arr 11:55 am)</li>
 <li>Chicago ORD → Madrid (Iberia IB 342, dep 4:30 pm, arr Sept 29 7:55 am)</li>
 </ul>
 </section>
@@ -189,15 +186,7 @@ ul.task-list li input[type="checkbox"] {
 </li>
 <li>Check-in: <strong>Albergue O Durmiñento</strong>.<br>
 </li>
-<li>Afternoon: explore old town.
-<ul>
-<li>Pick up pilgrim credential (credencial) at Iglesia de Santa Mariña, the Tourist Office on Rúa Maior. Monastery of La Magdalena is another option. (~€2–3 cash)<br>
-</li>
-</ul></li>
-<li>Evening: pilgrim dinner.
-<ul>
-<li>Recommended to join a lively spot such as Mesón O Tapas do Peregrino or O Descanso for the set pilgrim menu (starter, main, dessert, wine/water). These places are popular with walkers and a good way to meet fellow pilgrims before starting the Camino.</li>
-</ul></li>
+<li>Afternoon: explore old town.</li>
 </ul>
 <div class="callout callout-style-default callout-note callout-titled">
 <div class="callout-header d-flex align-content-center">
