--- a/spain-2025-itinerary.html
+++ b/spain-2025-itinerary.html
@@ -336,7 +336,7 @@ Rain fell steadily throughout the day, but it was my sore left ankle and right k
 <ul>
 <li>Full day in Santiago.<br>
 </li>
-<li>Overnight: <strong>Pensión Rua Nova</strong> (Single room with private bathroom, free Wi-Fi, pedestrian old town location).</li>
+<li>Overnight: <strong>Pensión Rua Nova</strong></li>
 </ul>
 <div class="callout callout-style-default callout-note callout-titled">
 <div class="callout-header d-flex align-content-center">
@@ -361,26 +361,29 @@ After staying out late the night before, I slept in and took things slowly. The 
 <section id="day-9-mon-oct-6" class="level3">
 <h3 class="anchored" data-anchor-id="day-9-mon-oct-6">Day 9 – Mon Oct 6</h3>
 <ul>
-<li><p>Finisterre, Ézaro &amp; Muxía day tour (Toxo Travel)</p>
-<ul>
-<li>Planned stops
-<ul>
-<li>Muros — fishing village with 15th-century historic quarter, arcades and galleries overlooking the estuary</li>
-<li>Ézaro waterfall — River Xallas drops ~40 m directly to the sea</li>
-<li>Fisterra Lighthouse &amp; Km 0 — “end of the world” viewpoint over the Corcubión estuary</li>
-<li>Finisterre village — free time for old town, port, fish market, and lunch (Galician seafood)</li>
-<li>Muxía — Sanctuary of A Barca and the three “sacred stones” on a wild Atlantic point</li>
-<li>Ponte Maceira — cobbled hamlet with 14th-century Romanesque bridge and medieval mills</li>
-</ul></li>
-</ul></li>
-<li><p>Return to Santiago by early evening for a relaxed final night in the old town</p></li>
-<li><p>Overnight: <strong>Hotel Rúa Villar</strong> (Santiago).</p></li>
+<li>Finisterre tour</li>
+<li>Overnight: <strong>Hotel Rúa Villar</strong> (Santiago).</li>
 </ul>
+<div class="callout callout-style-default callout-note callout-titled">
+<div class="callout-header d-flex align-content-center">
+<div class="callout-icon-container">
+<i class="callout-icon"></i>
+</div>
+<div class="callout-title-container flex-fill">
+Note
+</div>
+</div>
+<div class="callout-body-container callout-body">
+<p><strong>Daily Summary — Oct 6</strong><br>
+I booked a guided day tour to the coast. We visited Muros, Ézaro waterfall, the Fisterra lighthouse (“the end of the world”), the village of Finisterre, Muxía’s Sanctuary of A Barca, and Ponte Maceira with its 14th‑century Romanesque bridge. Muros was my favorite stop—a historic fishing village built up the hillside.</p>
+<p>In Finisterre I had a pizza and a beer at an outdoor table overlooking the harbor. At Ézaro, the waterfall setting was beautiful, and it made me think a small boat tour out on the ría would be a great way to see this coast; something to consider for a future trip.</p>
+<p>Back in Santiago I rested, then walked up to Parque da Alameda for sunset—first over the University of Santiago and then across to the cathedral from a distance. Dinner was on a street‑side table along my hotel’s cobblestone street: a Galician meat‑and‑cheese board with a glass of vino tinto.</p>
+</div>
+</div>
 </section>
 <section id="day-10-tue-oct-7" class="level3">
 <h3 class="anchored" data-anchor-id="day-10-tue-oct-7">Day 10 – Tue Oct 7</h3>
 <ul>
-<li>Breakfast with Carlos</li>
 <li>11:48 — Depart Santiago (AVE 04314, Confort, seat 4D, Booking Reference: KYC3XB).<br>
 </li>
 <li>14:50 — Arrive Madrid Chamartín.<br>
@@ -389,28 +392,52 @@ After staying out late the night before, I slept in and took things slowly. The 
 </li>
 <li>Overnight: <strong>Petit Palace Plaza Mayor</strong></li>
 </ul>
+<div class="callout callout-style-default callout-note callout-titled">
+<div class="callout-header d-flex align-content-center">
+<div class="callout-icon-container">
+<i class="callout-icon"></i>
+</div>
+<div class="callout-title-container flex-fill">
+Note
+</div>
+</div>
+<div class="callout-body-container callout-body">
+<p><strong>Daily Summary — Oct 7</strong><br>
+I met Carlos for breakfast at a café on the walk down to the station since we were on the same train. We took the AVE high‑speed rail back to Madrid. After checking into my hotel, I rested for a bit—my left ankle and right knee are still sore. By coincidence, friends from Grand Rapids who now live in Las Vegas were in Madrid the same night, so we met up and spent the evening sampling a few tapas spots, ending the night with churros y chocolate at Chocolatería San Ginés.</p>
+</div>
+</div>
 </section>
 <section id="day-11-wed-oct-8" class="level3">
 <h3 class="anchored" data-anchor-id="day-11-wed-oct-8">Day 11 – Wed Oct 8</h3>
 <ul>
-<li><strong>08:30 am</strong> — Arrive at Madrid Barajas T4 (recommended 3 hrs before departure, take Cercanías train from central Madrid).<br>
-</li>
+<li><strong>08:30 am</strong> — Arrive at Madrid Barajas T4 (recommended 3 hrs before departure)</li>
 <li>From Petit Palace Plaza Mayor:
 <ul>
 <li>Walk ~5 min to Sol station.<br>
 </li>
 <li>Take Cercanías C3 or C4 northbound to Chamartín (~10 min).<br>
 </li>
-<li>At Chamartín, transfer to Cercanías C1 or C10 directly to Barajas T4 (~15–20 min).<br>
-</li>
-<li>Total travel time ~40 min including transfer. Trains run every 15–20 min.<br>
-</li>
-<li>Alternative: Taxi/Uber directly to T4 (~25–35 min, €30–35 flat rate).</li>
+<li>At Chamartín, transfer to Cercanías C1</li>
 </ul></li>
 <li>Madrid → Chicago ORD (Iberia IB 341, dep 11:35 am, arr 2:15 pm)<br>
 </li>
 <li>Chicago → Muskegon (KG 5775, dep 6:00 pm, arr 7:50 pm)</li>
 </ul>
+<div class="callout callout-style-default callout-note callout-titled">
+<div class="callout-header d-flex align-content-center">
+<div class="callout-icon-container">
+<i class="callout-icon"></i>
+</div>
+<div class="callout-title-container flex-fill">
+Note
+</div>
+</div>
+<div class="callout-body-container callout-body">
+<p>Daily Summary — Oct 8<br>
+I walked to Sol Cercanías station and took the Cercanías to to the airport via a transfer at Chamartín. Getting through the airport was smooth, though I have heard at other times passport control can be backed up. I stopped by the lounge for yogurt and a cappuccino, then boarded and took a good nap on the plane.</p>
+<p>I really enjoyed this trip and plan to do it again—possibly the Camino Portugués next time. I don’t see myself doing a full 30-day walk, but I could see adding a few more days beyond the “minimum” in the future.</p>
+</div>
+</div>
 <hr>
 </section>
 </section>
@@ -420,8 +447,7 @@ After staying out late the night before, I slept in and took things slowly. The 
 <h3 class="anchored" data-anchor-id="documents-money">Documents &amp; Money</h3>
 <ul>
 <li>Passport</li>
-<li>Flight &amp; train tickets (digital copies on phone + 1 printed copy as backup)<br>
-</li>
+<li>Flight &amp; train tickets (digital copies on phone)</li>
 <li>Credit + ATM cards</li>
 <li>Euro cash</li>
 <li>Priority Health card</li>
@@ -430,11 +456,17 @@ After staying out late the night before, I slept in and took things slowly. The 
 <section id="pack-setup" class="level3">
 <h3 class="anchored" data-anchor-id="pack-setup">Pack Setup</h3>
 <ul>
-<li>REI Trail 40 backpack with built-in rain cover<br>
-</li>
+<li>REI Trail 40 backpack with built-in rain cover
+<ul>
+<li><em>Pack worked well, a little larger than I needed.</em></li>
+</ul></li>
 <li>1 small dry sack (for electronics/passport)<br>
 </li>
 <li>Plastic bags + a couple lightweight packing cubes (organization, laundry separation)</li>
+<li>Ultra-lightweight Eagle Creek packing cubes
+<ul>
+<li><em>Nice to keep pack organized in hostels</em></li>
+</ul></li>
 </ul>
 </section>
 <section id="clothing" class="level3">
@@ -467,13 +499,13 @@ After staying out late the night before, I slept in and took things slowly. The 
 <section id="footwear" class="level3">
 <h3 class="anchored" data-anchor-id="footwear">Footwear</h3>
 <ul>
-<li>Altra Lone Peak 9 Trail Running Shoes (primary walking shoes)
+<li>Altra Lone Peak 9 Trail Running Shoes
 <ul>
 <li><em>These shoes were very comfortable and trail running shoes such as this are by far the most common Camino footwear. However, my ankles might have appreciated a bit more support from a light hiking shoe such as a Hoka Speedgoat</em></li>
 </ul></li>
 <li>Xero Shoes Z-Trail EV Sandals (evenings / backup)
 <ul>
-<li><em>These are nice light sandals, but simple flip flops would have been sufficient</em> ### Toiletries</li>
+<li><em>These are nice light sandals, but simple flip flops would have been sufficient for use around the hostel</em> ### Toiletries</li>
 </ul></li>
 <li>Toothbrush + small toothpaste<br>
 </li>
@@ -483,13 +515,13 @@ After staying out late the night before, I slept in and took things slowly. The 
 </li>
 <li>Razor + small shaving cream<br>
 </li>
-<li>Quick-dry towel (microfiber)<br>
+<li>Quick-dry towel (Pak Towel)
+<ul>
+<li><em>The size I took was functional but a bit too small</em></li>
+</ul></li>
+<li>Sunscreen (50 ml to start; can buy more in Spain if needed)<br>
 </li>
-<li>Sunscreen (50 ml to start; refill in Spain)<br>
-</li>
-<li>Lip balm with SPF<br>
-</li>
-<li>Nail clippers</li>
+<li>Lip balm with SPF</li>
 </ul>
 </section>
 <section id="health-first-aid" class="level3">
@@ -497,9 +529,12 @@ After staying out late the night before, I slept in and took things slowly. The 
 <ul>
 <li>Walgreens blister pads (Compeed-style hydrocolloid)
 <ul>
-<li><em>A necessity … I was able to share with a few others who did not bring</em></li>
+<li><em>A necessity … I was able to share with a few others who did not bring, had a small blister on my toe myself</em></li>
 </ul></li>
-<li>Ibuprofen / acetaminophen / citalopram / ambien</li>
+<li>Ibuprofen / acetaminophen / citalopram / ambien
+<ul>
+<li><em>Had just the right amount of ibuprofen, but could have brought more</em></li>
+</ul></li>
 <li>Hand sanitizer</li>
 <li>Tissues</li>
 <li>Earplugs + eye mask (for noisy albergues)<br>
@@ -516,7 +551,7 @@ After staying out late the night before, I slept in and took things slowly. The 
 <li>AirPods</li>
 <li>13″ MacBook Air (with power bank/cord)
 <ul>
-<li><em>There were times I’m glad I had this, but it probably was not worth the weight; will reconsider for next time</em></li>
+<li><em>There were times I’m glad I had this, but for next time will not bring as it was not worth the weight</em></li>
 </ul></li>
 </ul>
 </section>
@@ -538,7 +573,7 @@ After staying out late the night before, I slept in and took things slowly. The 
 <li>2 × 1 L bottles (Smartwater style — bring 1 from home, buy 1 in Spain)</li>
 <li>pen
 <ul>
-<li><em>more useful than I had thought, Pilgrim credencial requires some writing</em></li>
+<li><em>more useful than I had thought, Pilgrim credencial requires some writing, customs form on flight back to U.S.</em></li>
 </ul></li>
 </ul>
 <hr>
